--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -2,9 +2,9 @@
 
 <%= form_tag articles_path do %>
 	タイトル
-	<input type="text" name="title">
+	<input type="text" name="article[title]">
 	内容
-	<textarea name="content"></textarea>
+	<textarea name="article[content]"></textarea>
 	<input type="submit" value="t投稿する">
 
 	area
