--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,3 +9,5 @@
 
 <%= link_to "編集", edit_article_path(@article.id) %>
 <%= link_to "削除", destroy_article_path(@article.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
+
+<%= link_to "一覧ページ", articles_path %>
