--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,26 +1,18 @@
-<h1>Articles#new</h1>
+<h1>新しく投稿しよう！！</h1>
 
-<%= form_tag articles_path do %>
+
+<%= form_for @article do |f| %>
 	タイトル
-	<input type="text" name="article[title]">
+	<%= f.text_field :title, class: "" %>
 	内容
-	<textarea name="article[content]"></textarea>
+	<%= f.text_field :content, class: "" %>
 	場所
-	<textarea name="article[area]"></textarea>
+	<%= f.text_field :area, class: "" %>
 
-	<input type="submit" value="投稿する">
-
-	<div class="field">
-	<%= f.label :img %>
-	<%= f.file_field :img %>
-	</div>
-
-
-	doya
-	img
+	<%= f.submit "投稿する", class: "" %>
 <% end %>
 
 
 
 
-<h3><%= link_to "", new_article_path %></h3>
+<h3><%= link_to "TOP", root_path %></h3>
