--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,5 +1,11 @@
 
-<div class="field">
+
+
+
+
+
+
+<!-- <div class="field">
 	<%= f.label :image %>
 	<%= f.file_field :image %>
-</div>
+</div> -->
