--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -5,9 +5,9 @@
 	タイトル
 	<%= f.text_field :title, class: "" %>
 	内容
-	<%= f.text_field :content, class: "" %>
+	<%= f.text_area :content, class: "" %>
 	場所
-	<%= f.text_field :area, class: "" %>
+	<%= f.text_area :area, class: "" %>
 
 	<%= f.submit "投稿する", class: "" %>
 <% end %>
