--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -5,9 +5,11 @@
 	タイトル
 	<%= f.text_field :title, class: "" %>
 	内容
-	<%= f.text_field :content, class: "" %>
+	<%= f.text_area :content, class: "" %>
 	場所
-	<%= f.text_field :area, class: "" %>
+	<%= f.text_area :area, class: "" %>
 
 	<%= f.submit "保存", class: "" %>
 <% end %>
+
+<!-- text_fieldをできれば範囲を広げられるやつに修正する -->
