--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,5 @@
+<h1>修正してください</h1>
+
 <h2>タイトル</h2>
 <p><%= @article.title %></p>
 <h2>内容</h2>
@@ -9,5 +11,4 @@
 
 <%= link_to "編集", edit_article_path(@article.id) %>
 <%= link_to "削除", destroy_article_path(@article.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
-
 <%= link_to "一覧ページ", articles_path %>
