--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,15 @@
  
   <body>
   	<h1>welcome to travelon!</h1>
+
+    <% if user_signed_in? %>
+      Logged in as <%= current_user.email %>
+      <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+    <% else %>
+      <%= link_to "新規登録", new_user_registration_path %> |
+      <%= link_to "ログイン", new_user_session_path %>
+    <% end %>
+    
     <%= yield %>
   </body>
 </html>
