--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,6 +1,25 @@
+<%= form_for(article) do |f| %>
 
+	<div class="field">
+		<%= f.label :title %>
+		<%= f.text_field :title %>
+	</div>
 
+	<div class="field">
+		<%= f.label :content %>
+		<%= f.text_area :content %>
+	</div>
 
+	<div class="field">
+		<%= f.label :area %>
+		<%= f.text_area :area %>
+	</div>
+
+	<div class="field">
+		<%= f.label :user_id %><br>
+		ユーザーID
+		<%= f.collection_select :user_id, User.all, :id, :id %>
+	</div>
 
 
 
@@ -9,3 +28,5 @@
 	<%= f.label :image %>
 	<%= f.file_field :image %>
 </div> -->
+
+<% end %>
