--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,18 +1,43 @@
 <h1>新しく投稿しよう！！</h1>
 
+<% if @note.errors.any? %>
+    <div id="error_explanation" class="alert alert-danger">
+      <h2><%= @note.errors.count %>件のエラーがあります。</h2>
 
-<%= form_for @article do |f| %>
-	タイトル
-	<%= f.text_field :title, class: "" %>
-	内容
-	<%= f.text_area :content, class: "" %>
-	場所
-	<%= f.text_area :area, class: "" %>
+      <ul>
+        <% @note.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+   タイトル
+  <%= text_field_tag 'note[title]', @note.title, class: "form-control title-field" %>
+  内容
+  <%= text_area_tag 'note[content]', @note.content, class: "form-control content-field" %>
 
-	<%= f.submit "投稿する", class: "" %>
-<% end %>
 
-
-
-
+<%= render'form' %>
 <h3><%= link_to "TOP", root_path %></h3>
+
+
+<!-- <h1>新規投稿する</h1>
+<%= form_for @note do |f| %>
+  <% if @note.errors.any? %>
+    <div id="error_explanation" class="alert alert-danger">
+      <h2><%= @note.errors.count %>件のエラーがあります。</h2>
+
+      <ul>
+        <% @note.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+    タイトル
+  <%= f.text_field :title, class: "form-control title-field" %>
+  内容
+  <%= f.text_area :content, class: "form-control content-field" %>
+  <%= f.submit '保存', class: "btn primary-btn" %>
+<% end %>
