--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,10 @@
 <h1>投稿の詳細</h1>
 
+<p id="notice" class="alert alert-success">
+  <%= notice %>
+</p>
+
+
 <h2>タイトル</h2>
 <p><%= @article.title %></p>
 <h2>内容</h2>
