--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,11 +9,14 @@
 <p><%= @article.title %></p>
 <h2>内容</h2>
 <p><%= @article.content %></p>
-<h2>場所</h2>
-<p><%= @article.area %></p>
+<h2>画像</h2>
+<p><%= image_tag@article.img %></p>
 
-<%= link_to "戻る", article_path %>
+<!-- <p><%= @article.area %></p>
+ -->
 
+
+<%= link_to "戻る", articles_path %>
 <%= link_to "編集", edit_article_path(@article.id) %>
 <%= link_to "削除", destroy_article_path(@article.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
 <%= link_to "一覧ページ", articles_path %>
