--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,4 +1,4 @@
 <h1>ここがTopページ</h1>
 
-<h2><%= link_to "MAKE NEW", new_article_path %></h2>
+<h2><%= link_to "新規作成", new_article_path %></h2>
 <h2><%= link_to "一覧", articles_path %></h2>
