--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,8 +6,11 @@
 	<h2><%= link_to article.title, article_path(article.id) %></h2>
 	<p>内容</p>
 	<h2><%= article.content %></h2>
+	<p>場所</p>
+	<h2><%= article.area %></h2>
 	<p>画像</p>
 	<h2><%= image_tag article.img %></h2>
 <% end %>
 
 <h3><%= link_to "新規作成", new_article_path %></h3>
+<h3><%= link_to "TOP", root_path %></h3>
