--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,13 +1,26 @@
-
+<div class="container">
 <%= form_for @article do |f| %>
+	<br>
 	タイトル
 	<%= f.text_field :title, class: "article, article-title" %>
+	<br>
 	内容
 	<%= f.text_area :content, class: "article, article-content" %>
+	<br>
 	場所
 	<%= f.text_area :area, class: "article, article-area" %>
+	<br>
 	画像
-	<%= f.file_field :img, class: "" %>
+	<%= f.file_field :img, class: "article" %>
 
+
+	<br>
+	DOYA
+	<div class='star'>
+	<p class="star1">★</p><p class="star2">★</p><p class="star3">★</p><p class="star4">★</p><p class="star5">★</p>
+	</div>
+
+	<br>
 	<%= f.submit "投稿する", class: "article, article-submit" %>
 <% end %>
+</div>
