--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,6 +11,9 @@
 <p><%= @article.content %></p>
 <h2>場所</h2>
 <p><%= @article.area %></p>
+<h2>どや</h2>
+<p><%= @article.doya %></p>
+
 
 <h2>画像</h2>
 <p><%= image_tag@article.img %></p>
