--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -1,3 +1,34 @@
 // Place all the styles related to the articles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.new_article{
+	height: 400px;
+	display: block;
+	line-height: 30px;
+	text-align: center;
+	background-image: url("http://pds.exblog.jp/pds/1/201104/07/39/e0207439_20191388.jpg");
+	background-size: cover;
+}
+
+.article{
+	opacity: .5;
+}
+
+.star{
+	width: 50px;
+	height: 50px;
+	display: inline-block;
+	text-align: center;
+	color: yellow;
+	size: 30px;
+}
+
+.star p{
+	display: inline;
+}
