--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -16,9 +16,17 @@
 
 	<br>
 	DOYA
+	<%= f.number_field :doya, class: "article" %>
+
+
+	<!-- <div id="container">
+    <h1>Star Valuation</h1>
+    <div class="star-value" name="ex1"></div>
+    </div>
+
 	<div class='star'>
 	<p class="star1">★</p><p class="star2">★</p><p class="star3">★</p><p class="star4">★</p><p class="star5">★</p>
-	</div>
+	</div> -->
 
 	<br>
 	<%= f.submit "投稿する", class: "article, article-submit" %>
