--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -3,3 +3,9 @@
 	<%= f.label :image %>
 	<%= f.file_field :image %>
 </div>
+
+<div class="field">
+	<%= f.label :user_id %><br>
+	ユーザーID
+	<%= f.collection_select :user_id, User.all, :id, :id %>
+</div>
