--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,3 +1,3 @@
-<h1>ここがTopページ</h1>
+<h1>ようこそTravelonへ</h1>
+<p>Travelonは各地の隠れスポットなどの情報を集められ更に旅の仲間を集めることができるコミュニティーを生み出す場所です。</p>
 
-<h2><%= link_to "New", new_article_path %></h2>
