--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -60,7 +60,7 @@ h3{
 /*一覧ページindex/詳細ページshow*/
 .article-container{
 	width: 500px;
-	height: 700px;
+	height: auto;
 	margin: 0 auto;
 	background-color: #afeeee;
 }
