--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -22,25 +22,58 @@
 	<p class="article-area"><%= @article.area %></p>
 	<br>
 
+	<div class="doya clearfix">
 	<h3>どや度</h3>
-	<p class="article-doya clearfix"><%= @article.doya %>点</p>
+	<p class="article-doya"><%= @article.doya %>どや</p>
 			<% if @article.doya == 1 %>
-				<div class="star" ><%= image_tag ('star-image.jpg') %></div>
+				<div class="star" ><p>★</p></div>
+				<div class="star" ><p>☆</p></div>
+				<div class="star" ><p>☆</p></div>
+				<div class="star" ><p>☆</p></div>
+				<div class="star" ><p>☆</p></div>
 			<% elsif @article.doya == 2 %>
-				<div class="star" ><%= image_tag ('star-image.jpg') %></div>
-				<div class="star" ><%= image_tag ('star-image.jpg') %></div>
+				<div class="star" ><p>★</p></div>
+				<div class="star" ><p>★</p></div>
+				<div class="star" ><p>☆</p></div>
+				<div class="star" ><p>☆</p></div>
+				<div class="star" ><p>☆</p></div>
 			<% elsif @article.doya == 3 %>
-				<div class="star" ><%= image_tag ('star-image.jpg') %></div>
-				<div class="star" ><%= image_tag ('star-image.jpg') %></div>
-				<div class="star" ><%= image_tag ('star-image.jpg') %></div>
+				<div class="star" ><p>★</p></div>
+				<div class="star" ><p>★</p></div>
+				<div class="star" ><p>★</p></div>
+				<div class="star" ><p>☆</p></div>
+				<div class="star" ><p>☆</p></div>
+			<% elsif @article.doya == 4 %>
+				<div class="star" ><p>★</p></div>
+				<div class="star" ><p>★</p></div>
+				<div class="star" ><p>★</p></div>
+				<div class="star" ><p>★</p></div>
+				<div class="star" ><p>☆</p></div>
+			<% elsif @article.doya == 5 %>
+				<div class="star" ><p>★</p></div>
+				<div class="star" ><p>★</p></div>
+				<div class="star" ><p>★</p></div>
+				<div class="star" ><p>★</p></div>
+				<div class="star" ><p>★</p></div>
 			<% else @article.doya %>
 				<p>NOドヤ</p>
 			<% end %>
+	</div>
 	<br>
-
 
 	<h2>Photo</h2>
 	<div class="article-image"><%= image_tag@article.img %></div>
+	<br>
+
+	<tr>
+       <td>
+            <% if @article.liked_by? current_user %>
+              <%= link_to "いいね解除", article_likes_path(@article), method: :delete %>
+            <% else %>
+              <%= link_to "いいね", article_likes_path(@article), method: :post %>
+            <% end %>
+        </td>
+    </tr>
 </div>
 
  
