--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,27 @@
  
   <body>
 
+  <header>
+    <nav>
+        <!-- user_signed_in? はユーザがログインしているか調べるdeviseのHelperメソッド -->
+        <%= link_to 'トップ', root_path %>｜
+        <% if user_signed_in? %> 
+          <!-- current_user は現在ログインしているUserオブジェクトを返すdeviseのHelperメソッド -->
+          <!-- *_path はUserモデルを作成したときに、
+            deviseにより自動で作成されてますので、rake routesで確認できます -->
+          Logged in as <strong><%= current_user.email %></strong>
+          <%= link_to 'プロフィール変更', edit_user_registration_path %> |
+          <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>｜
+          <%= link_to "一覧", articles_path %>｜
+          <%= link_to 'マイページ', user_path(current_user) %>｜
+          <%= link_to 'ユーザー一覧', users_path %>
+        <% else %>
+          <%= link_to "サインイン", new_user_registration_path %> |
+          <%= link_to "ログイン", new_user_session_path %>
+        <% end %>
+    </nav>
+</header>
+
 
   	<h1>welcome to travelon!</h1>
 
