--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -106,6 +106,11 @@ h3{
   background-color: white;
 }
 
+.article-like{
+  width: 100px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
 /*.star{
    margin: 50px 0;
    position: relative;
