--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -59,9 +59,10 @@
 	<h3 class="article-image"><%= image_tag article.img %></h3>
 	<br>
 
-	<h3 class="article-hobby"><%= article.hobby %></h3>
+	<h3 class="article-hobby">＃<%= article.hobby %></h3>
 	<br>
 
+	<div class="article-like">
 	<tr>
        <td>
             <% if article.liked_by? current_user %>
@@ -71,6 +72,7 @@
             <% end %>
         </td>
     </tr>
+    </div>
 
 <% end %>
 
