--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -36,7 +36,7 @@ h3{
 	display: block;
 	line-height: 30px;
 	text-align: center;
-	background-image: url("http://pds.exblog.jp/pds/1/201104/07/39/e0207439_20191388.jpg");
+	/*background-image: url("http://pds.exblog.jp/pds/1/201104/07/39/e0207439_20191388.jpg");*/
 	background-size: cover;
 }
 
