--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -63,9 +63,9 @@
 
 <%= paginate @articles %>
 
-<h3><%= link_to "新規作成", new_article_path %></h3>
+<P><%= link_to "新規作成", new_article_path %></p>
 
-<h3><%= link_to "ユーザー一覧", users_path %></h3>
+<p><%= link_to "ユーザー一覧", users_path %></p>
 
 
 
