--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,14 +2,28 @@
 
 
 <%= form_for @user do |f| %>
-	名前
-	<%= f.text_field :name, class: "" %>
-	出身地
-	<%= f.text_field :birthplace, class: "" %>
-	性別
-	<%= f.text_field :sex, class: "" %>
-	年齢
-	<%= f.text_field :age, class: "" %>
+	<div class="form-group">
+		名前
+		<%= f.text_field :name, class: "form-control" %>
+	</div>
 
-	<%= f.submit "保存", class: "" %>
+	<div class="form-group">
+		出身地
+		<%= f.text_field :birthplace, class: "form-control" %>
+	</div>
+
+	<div class="form-group">
+		性別
+		<%= f.text_field :sex, class: "form-control" %>
+	</div>
+
+	<div class="form-group">
+		年齢
+		<%= f.text_field :age, class: "form-control" %>
+	</div>
+
+	<div class="form-group">
+		<%= f.submit "保存", class: "btn btn-success" %>
+	</div>
+
 <% end %>
