--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -44,18 +44,6 @@ h3{
 	opacity: .7;
 }
 
-/*.star{
-	width: 50px;
-	height: 50px;
-	display: inline-block;
-	text-align: center;
-	color: yellow;
-	size: 30px;
-}
-
-.star p{
-	display: inline;
-}*/
 
 /*一覧ページindex/詳細ページshow*/
 .article-container{
@@ -111,70 +99,26 @@ h3{
   margin: 0 auto;
   margin-bottom: 30px;
 }
-/*.star{
-   margin: 50px 0;
-   position: relative;
-   display: block;
-   color: #ffff00;
-   width: 0px;
-   height: 0px;
-   border-right:  100px solid transparent;
-   border-bottom: 70px  solid #ffff00;
-   border-left:   100px solid transparent;
-   -moz-transform:    rotate(35deg);
-   -webkit-transform: rotate(35deg);
-   -ms-transform:     rotate(35deg);
-   -o-transform:      rotate(35deg);
-}
-
-.star:before{
-   border-bottom: 80px solid #ffff00;
-   border-left: 30px solid transparent;
-   border-right: 30px solid transparent;
-   position: absolute;
-   height: 0;
-   width: 0;
-   top: -45px;
-   left: -65px;
-   display: block;
-   content: '';
-   -webkit-transform: rotate(-35deg);
-   -moz-transform:    rotate(-35deg);
-   -ms-transform:     rotate(-35deg);
-   -o-transform:      rotate(-35deg);
-}
-
-.star:after{
-   position: absolute;
-   display: block;
-   color: #ffff00;
-   top: 3px;
-   left: -105px;
-   width: 0px;
-   height: 0px;
-   border-right: 100px solid transparent;
-   border-bottom: 70px solid ;
-   border-left: 100px solid transparent;
-   -webkit-transform: rotate(-70deg);
-   -moz-transform:    rotate(-70deg);
-   -ms-transform:     rotate(-70deg);
-   -o-transform:      rotate(-70deg);
-   content: '';
-}*/
-
 
 
 
 /*どや*/
 .star{
-    color: red;
+    color: orange;
     margin: auto;
     display: block;
     float: left;
-    /*background: url(./star-valuation.png) no-repeat;*/
 }
 
 .star>div {
     float: left;
 }
+
+/*いいね画像*/
+.like-image img{
+	width: 20px;
+	height: 20px;
+}
+
+
 
