--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -76,8 +76,14 @@
        <td>
             <% if @article.liked_by? current_user %>
               <%= link_to "いいね解除", article_likes_path(@article), method: :delete %>
+              <div class="like-image">
+               <%= image_tag '/heart1.png' %>
+              </div>
             <% else %>
               <%= link_to "いいね", article_likes_path(@article), method: :post %>
+              <div class="like-image">
+                <%= image_tag '/heart2.png' %>
+              </div>
             <% end %>
         </td>
     </tr>
