--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -114,6 +114,12 @@ h3{
     float: left;
 }
 
+/*どや　地球*/
+.earth-image img{
+	width: 30px;
+	height: 30px;
+}
+
 /*いいね画像*/
 .like-image img{
 	width: 20px;
