--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -49,6 +49,11 @@
 			<div class="star" ><p>★</p></div>
 			<div class="star" ><p>★</p></div>
 			<div class="star" ><p>★</p></div>
+
+			<!-- 地球のアイコン(仮) -->
+			<div class="earth-image">
+			 <%= image_tag '/earth.jpg' %>
+			</div>
 		<% else article.doya %>
 			<p>NOどや</p>
 		<% end %>
