--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,10 @@
               <%= link_to 'ユーザー一覧', users_path %>
             </li>
 
+            <li>
+              <%= link_to "新規作成", new_article_path %>
+            </li>
+
           <% else %>
                 <li><%= link_to "新規登録", new_user_registration_path %></li> | 
                 <li><%= link_to "ログイン", new_user_session_path %></li>
