--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -50,7 +50,7 @@
 			<div class="star" ><p>★</p></div>
 			<div class="star" ><p>★</p></div>
 
-			<!-- 地球のアイコン(仮) -->
+			<!-- 地球のアイコン() -->
 			<div class="earth-image">
 			 <%= image_tag '/earth.jpg' %>
 			</div>
