--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -72,6 +72,7 @@
 	<div class="article-hobby"><%= @article.hobby %></div>
 	<br>
 
+
 	<tr>
        <td>
             <% if @article.liked_by? current_user %>
@@ -87,6 +88,13 @@
             <% end %>
         </td>
     </tr>
+
+	<<div>
+	  <small>
+	    <%= link_to @article.likes.count, article_path(@article.id), id: 'like-count' %>人がいいね！といっています
+	  </small>
+	</div>
+
 </div>
 
 
