current user edit

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -89,9 +89,9 @@
         </td>
     </tr>
 
-	<<div>
+	<div>
 	  <small>
-	    <%= link_to @article.likes.count, article_path(@article.id), id: 'like-count' %>人がいいね！といっています
+	    <%= link_to @article.likes.count, article_path(@article.id), id: 'like-count' %> 人がいいね！しました
 	  </small>
 	</div>
 
