--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,8 +1,10 @@
 <h1>Article一覧</h1>
 
+
 <div class="index-content clearfix">
 <tbody>
 <% @articles.each do |article| %>
+	<div class="col-md-4">
 	<!-- <p>タイトル</p> -->
 	<h2 class="article-title"><%= link_to article.title, article_path(article.id) %></h2>
 	<br>
@@ -70,19 +72,14 @@
 	<div class="article-like">
 	<tr>
        <td>
-            <% if article.liked_by? current_user %>
-              <%= link_to "いいね解除", article_likes_path(article), method: :delete %>
-              <div class="like-image">
-               <%= image_tag '/heart1.png' %>
-              </div>
-            <% else %>
               <%= link_to "いいね", article_likes_path(article), method: :post %>
               <div class="like-image">
                 <%= image_tag '/heart2.png' %>
               </div>
-            <% end %>
         </td>
     </tr>
+    </div>
+
     </div>
 
 <% end %>
@@ -90,7 +87,7 @@
 </tbody>
 </div>
 
-<%= paginate @articles %>
+<p><%= paginate @articles %></p>
 
 
 
