--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,80 +5,81 @@
 
 	<tbody>
 
+	<div class="row">
 	<% @articles.each do |article| %>
-	  <div class="tabi">
-		<!-- <p>タイトル</p> -->
-		<h2 class="article-title"><%= link_to article.title, article_path(article.id) %></h2>
-		<br>
+		<div class="col-md-4">
+								<!-- <p>タイトル</p> -->
+			<h2 class="article-title"><%= link_to article.title, article_path(article.id) %></h2>
+								
 
-		<!-- どや -->
-		<div class="article-doya">
-		<h3><%= article.doya %>どや</h3>
-			<% if article.doya == 1 %>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>☆</p></div>
-				<div class="star" ><p>☆</p></div>
-				<div class="star" ><p>☆</p></div>
-				<div class="star" ><p>☆</p></div>
-			<% elsif article.doya == 2 %>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>☆</p></div>
-				<div class="star" ><p>☆</p></div>
-				<div class="star" ><p>☆</p></div>
-			<% elsif article.doya == 3 %>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>☆</p></div>
-				<div class="star" ><p>☆</p></div>
-			<% elsif article.doya == 4 %>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>☆</p></div>
-			<% elsif article.doya == 5 %>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>★</p></div>
+								<!-- どや -->
+				<div class="article-doya">
+					<h3><%= article.doya %>どや</h3>
+						<% if article.doya == 1 %>
+							<div class="star" ><p>★</p></div>
+							<div class="star" ><p>☆</p></div>
+							<div class="star" ><p>☆</p></div>
+							<div class="star" ><p>☆</p></div>
+							<div class="star" ><p>☆</p></div>
+						<% elsif article.doya == 2 %>
+							<div class="star" ><p>★</p></div>
+							<div class="star" ><p>★</p></div>
+							<div class="star" ><p>☆</p></div>
+							<div class="star" ><p>☆</p></div>
+							<div class="star" ><p>☆</p></div>
+						<% elsif article.doya == 3 %>
+							<div class="star" ><p>★</p></div>
+							<div class="star" ><p>★</p></div>
+							<div class="star" ><p>★</p></div>
+							<div class="star" ><p>☆</p></div>
+							<div class="star" ><p>☆</p></div>
+						<% elsif article.doya == 4 %>
+							<div class="star" ><p>★</p></div>
+							<div class="star" ><p>★</p></div>
+							<div class="star" ><p>★</p></div>
+							<div class="star" ><p>★</p></div>
+							<div class="star" ><p>☆</p></div>
+						<% elsif article.doya == 5 %>
+							<div class="star" ><p>★</p></div>
+							<div class="star" ><p>★</p></div>
+							<div class="star" ><p>★</p></div>
+							<div class="star" ><p>★</p></div>
+							<div class="star" ><p>★</p></div>
 
-				<!-- 地球のアイコン() -->
-				<div class="earth-image">
-				 <%= image_tag '/earth.jpg' %>
+										<!-- 地球のアイコン() -->
+							<!-- <div class="earth-image">
+								<%= image_tag '/earth.jpg' %>
+							</div> -->
+
+						<% else article.doya %>
+							<p>NOどや</p>
+						<% end %>
 				</div>
+				
 
-			<% else article.doya %>
-				<p>NOどや</p>
-			<% end %>
-		</div>
-		<br>
+								<!-- <p>画像</p> -->
+				<h3 class="article-image"><%= image_tag article.img %></h3>
+								
 
-		<!-- <p>画像</p> -->
-		<h3 class="article-image"><%= image_tag article.img %></h3>
-		<br>
+				<h3 class="article-hobby">＃<%= article.hobby %></h3>
+								
 
-		<h3 class="article-hobby">＃<%= article.hobby %></h3>
-		<br>
+				<div class="article-like">
+					<tr>
+				       <td>
+				            
+				              <%= link_to "いいね", article_likes_path(article), method: :post %>
+				              <div class="like-image">
+				                <%= image_tag '/heart2.png' %>
+				              </div>
+				            
+				        </td>
+				    </tr>
+				    </div>
+			    </div>
 
-		<div class="article-like">
-		<tr>
-	       <td>
-	            
-	              <%= link_to "いいね", article_likes_path(article), method: :post %>
-	              <div class="like-image">
-	                <%= image_tag '/heart2.png' %>
-	              </div>
-	            
-	        </td>
-	    </tr>
-	    </div>
-
-	   </div>
- 
 	<% end %>
+	</div>
 
 	</tbody>
 
