--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,4 @@
-<h1>新しく投稿しよう！！</h1>
+<h1>隠れスポットを紹介しよう</h1>
 
 <% if @article.errors.any? %>
     <div id="error_explanation" class="alert alert-danger">
