--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,29 @@
   <h1>ユーザー情報</h1>
 
-名前
+<div class="row">
+  <div class="col-md-3">
+    <div class="page4">
+      <h3>名前</h3>
+      <h4><%= @user.name %></h4>
+    </div>
+  </div>
 
+  <div class="col-md-3">
+    <h3>出身地</h3>
+    <p><%= @user.birthplace %></p>
+  </div>
 
-<p><%= @user.name %></p>
-出身地
-<p><%= @user.birthplace %></p>
-性別
-<p><%= @user.sex %></p>
-年齢
-<p><%= @user.age %></p>
+  <div class="col-md-3">
+    <h3>性別</h3>
+    <p><%= @user.sex %></p>
+  </div>
 
+  <div class="col-md-3">
+    <h3>年齢</h3>
+    <p><%= @user.age %></p>
+  </div>
+
+</div>
 
 
 <ul>
