--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.page3 {
+	height: 200px;
+	width: 300px;
+	background-color: #FFFAFA;
+}
+
+.page4 {
+	height: 200px;
+	width: 200px;
+	background-color: #FFFAFA;
+}
