--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -62,9 +62,9 @@
 			       <td>
 			              <%= link_to "いいね", article_likes_path(article), method: :post %>
 			              <div class="like-image">
-			                <%= image_tag '/heart2.png' %>
+			                <%= image_tag '/heart1.png' %>
+			                <%= link_to article.likes.count, article_path(article.id), id: 'like-count' %> 人がいいね！
 			              </div>
-			            
 			        </td>
 			    </tr>
 			</div>
