--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -13,3 +13,13 @@
 	width: 200px;
 	background-color: #FFFAFA;
 }
+
+.user-article-img img{
+	width: 150px;
+	height: 100px;
+}
+
+.like-article{
+	width: 200px;
+	height: 300px;
+}
