--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -1,17 +1,15 @@
 <ul>
     <li>
-      <%= link_to user_path(@user) do %>
-        <div class="text">投稿数</div>
-        <div class="num"><%= @user.articles.count %></div>
+      <%= link_to likes_user_path(@user) do %>
+        <div class="text">いいね一覧<%= @user.likes.count %>件</div>
+        <!-- <div class="num"><%= @user.likes.count %></div> -->
       <% end %>
     </li>
 
-    <li>
-      <%= link_to likes_user_path(@user) do %>
-        <div class="text">いいね一覧</div>
-        <div class="num"><%= @user.likes.count %></div>
-      <% end %>     
-    </li>
+      
+      <li>
+        <%= link_to '戻る', user_path(@user) %> 
+      </li>
 </ul>
 
 <% if @user.likes.empty? %>
@@ -43,6 +41,10 @@
           <%= image_tag article.img %>
         </div>
 
+        <div class="like-image">
+          <%= image_tag '/heart1.png' %>
+          <%= link_to article.likes.count, article_path(article.id), id: 'like-count' %> 人がいいね！
+        </div>
     </div>
 
 
