--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,23 +25,21 @@
 
 </div>
 
+<h3>
+      <%= link_to likes_user_path(@user) %>
+        <div class="text">いいね一覧<%= @user.likes.count %></div>
+        <!-- <div class="num"><%= @user.likes.count %></div> -->
 
-<ul>
-    <li>
-      <%= link_to likes_user_path(@user) do %>
-        <div class="text">投稿数</div>
-        <div class="num"><%= @user.articles.count %></div>
-      <% end %>
-    </li>
-    <li>
-      <%= link_to likes_user_path(@user) do %>
-        <div class="text">いいね一覧</div>
-        <div class="num"><%= @user.likes.count %></div>
-      <% end %>     
-    </li>
-</ul>
+      <%= link_to user_path(@user) %>
+      <div class="text">戻る</div>
+</h3>
 
 
+
+<h2>投稿一覧<%= @user.articles.count %></h2>
+    <%= link_to user_path(@user) %>
+      <!-- <div class="text">投稿数<%= @user.articles.count %></div> -->
+      <!-- <div class="num"><%= @user.articles.count %></div> -->
 
 <div class="user-article-index">
 <% @user.articles.each do |article| %>
