--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,8 +51,9 @@
             </li>
 
           <% else %>
-                <li><%= link_to "新規登録", new_user_registration_path %></li> | 
-                <li><%= link_to "ログイン", new_user_session_path %></li>
+                <li><%= link_to "新規登録", new_user_registration_path %></li> 
+                <li><%= link_to "ログイン", new_user_session_path %></li> 
+                <li><%= link_to "記事一覧", articles_path %></li>
           <% end %>
         </ul>
 
