--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,24 +3,30 @@
 <div class="row">
   <div class="col-md-3">
     <div class="page4">
-      <h3>名前</h3>
-      <h4><%= @user.name %></h4>
+      <h3 class="title">名前</h3>
+      <p class="word"><%= @user.name %></p>
     </div>
   </div>
 
   <div class="col-md-3">
-    <h3>出身地</h3>
-    <p><%= @user.birthplace %></p>
+    <div class="page4">
+      <h3 class="title">出身地</h3>
+      <p class="word"><%= @user.birthplace %></p>
+    </div>
   </div>
 
   <div class="col-md-3">
-    <h3>性別</h3>
-    <p><%= @user.sex %></p>
+    <div class="page4">
+      <h3 class="title">性別</h3>
+      <p class="word"><%= @user.sex %></p>
+    </div>
   </div>
 
   <div class="col-md-3">
-    <h3>年齢</h3>
-    <p><%= @user.age %></p>
+    <div class="page4">
+      <h3 class="title">年齢</h3>
+      <p class="word"><%= @user.age %></p>
+    </div>
   </div>
 
 </div>
