--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,70 +1,84 @@
 <h1>旅の記録</h1>
 
 
-<% if current_user.id == @article.user_id %>
-	<%= link_to "編集", edit_article_path(@article.id) %>
-	<%= link_to "削除", destroy_article_path(@article.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
-<% end %>
 
+<div class="row">
+	<div class="col-md-4">
+		<div class="page3">
+			<h3 class="title">タイトル</h3>
+			<p class="word"><%= @article.title %></p><br>
+		</div>
+	</div>
 
-<p id="notice" class="alert alert-success">
-  <%= notice %>
-</p>
+	<div class="col-md-4">
+		<div class="page3">
+			<h3 class="title">内容</h3>
+			<div class="word"><%= @article.content %></div><br>
+		</div>
+	</div>
 
-<div class="article-container">
-	<h3>タイトル</h3>
-	<p class="article-title"><%= @article.title %></p><br>
+	<div class="col-md-4">
+		<div class="page3">
+			<h3 class="title">場所</h3>
+			<p class="word"><%= @article.area %></p><br>
+		</div>
+	</div>
 
-	<h3>内容</h3>
-	<div class="article-content"><%= @article.content %></div><br>
+	<div class="col-md-4">
+		<div class="page3">
+			<h3 class="title">ドヤ度</h3>
+			<div class="word">
+			<p><%= @article.doya %>ドヤ</p>
+					<% if @article.doya == 1 %>
+						<div class="star" ><p>★</p></div>
+						<div class="star" ><p>☆</p></div>
+						<div class="star" ><p>☆</p></div>
+						<div class="star" ><p>☆</p></div>
+						<div class="star" ><p>☆</p></div>
+					<% elsif @article.doya == 2 %>
+						<div class="star" ><p>★</p></div>
+						<div class="star" ><p>★</p></div>
+						<div class="star" ><p>☆</p></div>
+						<div class="star" ><p>☆</p></div>
+						<div class="star" ><p>☆</p></div>
+					<% elsif @article.doya == 3 %>
+						<div class="star" ><p>★</p></div>
+						<div class="star" ><p>★</p></div>
+						<div class="star" ><p>★</p></div>
+						<div class="star" ><p>☆</p></div>
+						<div class="star" ><p>☆</p></div>
+					<% elsif @article.doya == 4 %>
+						<div class="star" ><p>★</p></div>
+						<div class="star" ><p>★</p></div>
+						<div class="star" ><p>★</p></div>
+						<div class="star" ><p>★</p></div>
+						<div class="star" ><p>☆</p></div>
+					<% elsif @article.doya == 5 %>
+						<div class="star" ><p>★</p></div>
+						<div class="star" ><p>★</p></div>
+						<div class="star" ><p>★</p></div>
+						<div class="star" ><p>★</p></div>
+						<div class="star" ><p>★</p></div>
+					<% else @article.doya %>
+						<p>NOドヤ</p>
+					<% end %>
+			</div><br>
+		</div>
+	</div>
 
-	<h3>場所</h3>
-	<p class="article-area"><%= @article.area %></p><br>
+	<div class="col-md-4">
+		<div class="page3">
+			<h3 class="title">Photo</h3>
+			<div class="article-image-show"><%= image_tag@article.img %></div><br>
+		</div>
+	</div>
 
-
-	<h3>ドヤ度</h3>
-	<div class="article-doya">
-	<p><%= @article.doya %>ドヤ</p>
-			<% if @article.doya == 1 %>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>☆</p></div>
-				<div class="star" ><p>☆</p></div>
-				<div class="star" ><p>☆</p></div>
-				<div class="star" ><p>☆</p></div>
-			<% elsif @article.doya == 2 %>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>☆</p></div>
-				<div class="star" ><p>☆</p></div>
-				<div class="star" ><p>☆</p></div>
-			<% elsif @article.doya == 3 %>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>☆</p></div>
-				<div class="star" ><p>☆</p></div>
-			<% elsif @article.doya == 4 %>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>☆</p></div>
-			<% elsif @article.doya == 5 %>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>★</p></div>
-				<div class="star" ><p>★</p></div>
-			<% else @article.doya %>
-				<p>NOドヤ</p>
-			<% end %>
-	</div><br>
-
-	<h3>Photo</h3>
-	<div class="article-image"><%= image_tag@article.img %></div><br>
-
-	<h3>Hobby</h3>
-	<div class="article-hobby"><%= @article.hobby %></div><br>
+	<div class="col-md-4">
+		<div class="page3">
+			<h3 class="title">Hobby</h3>
+			<div class="word">#<%= @article.hobby %></div><br>
+		</div>
+	</div>
 
 
 	<tr>
